test/files/neg/t8015-ffa.check
t8015-ffa.scala:7: error: type mismatch;
 found   : "3".type (with underlying type String)
 required: Int
  val i: Int = "3"      // error line 7 (was 8)
               ^
one error found
